--- a/example/index.html
+++ b/example/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="container">
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light cbp-af-header" role="navigation">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a href="#"><img src="montain.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
